Use sorted case-insensitive multimap for request headers